# threepp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTEXT.md  vcpkg.json
cmake/: FetchOptionalDeps.cmake  ThreeppSlangRuntime.cmake  config.cmake.in
doc/: rendering-color-space-constraints.md
docs/: examples_metal_alignment.md
docs/adr/: 0001-window-peripherals-separation.md  0002-renderer-minimal-interface.md  0003-glfwwindow-clientapi-parameterization.md  0004-pipelinekey-vertex-layout-bitmask.md  0005-viewport-scissor-in-base-interface.md  0006-unified-pbr-shading-strategy.md  0007-runtime-shadow-branch.md  0008-lazy-drawable-acquisition-for-mixed-pass.md  0009-tonemapping-in-base-renderer.md  0010-rendertarget-factory-for-backend-decoupling.md  0011-pre-renderable-job-queue.md  0012-mtl-reflector-uniforms-shader.md  0013-metal-frame-boundary-endframe.md  0014-clipping-shader-variant-strategy.md  0015-morph-target-attribute-slot-reuse.md  0016-depth-texture-metal-interception.md
examples/: AddExample.cmake  CMakeLists.txt  demo.cpp  demo_metal.cpp
examples/animation/: CMakeLists.txt  assimp_bones.cpp  assimp_bones_metal.cpp  simple_skinning.cpp  simple_skinning_metal.cpp
examples/audio/: audio.cpp
examples/controls/: CMakeLists.txt  drag.cpp  drag_metal.cpp  fly.cpp  fly_metal.cpp  transform.cpp  transform_metal.cpp
examples/extras/core/: CMakeLists.txt  fonts.cpp  fonts_metal.cpp
examples/extras/curves/: CMakeLists.txt  catmull_room_curve3.cpp  catmull_room_curve3_metal.cpp  cubic_bezier_curve.cpp  cubic_bezier_curve_metal.cpp  spline_editor.cpp  spline_editor_metal.cpp
examples/geometries/: CMakeLists.txt  basic_geometries.cpp  basic_geometries_metal.cpp  convex_geometry.cpp  convex_geometry_metal.cpp  dynamic.cpp  dynamic_metal.cpp  geometries.cpp  geometries_metal.cpp  heightmap.cpp  heightmap_metal.cpp  lathe_geometry.cpp  lathe_geometry_metal.cpp  shape_geometry.cpp  shape_geometry_metal.cpp  tube_geometry.cpp  tube_geometry_metal.cpp
examples/helpers/: CMakeLists.txt  camera_helper.cpp  camera_helper_metal.cpp  depth_sensor.cpp  depth_sensor_metal.cpp  helpers.cpp  helpers_metal.cpp  lidar.cpp  lidar_metal.cpp
examples/lights/: CMakeLists.txt  directional.cpp  directional_metal.cpp  hemi_light.cpp  hemi_light_metal.cpp  point_light.cpp  point_light_metal.cpp  spot_light.cpp  spot_light_metal.cpp
examples/loaders/: CMakeLists.txt  assimp_loader.cpp  assimp_loader_metal.cpp  collada_loader.cpp  collada_loader_metal.cpp  fbx_loader.cpp  gltf_loader.cpp  gltf_loader_metal.cpp  obj_loader.cpp  obj_loader_metal.cpp  stl_loader.cpp  stl_loader_metal.cpp  svg_loader.cpp  svg_loader_metal.cpp  urdf_loader.cpp  urdf_loader_metal.cpp  urdf_loader_obj.cpp  urdf_loader_obj_metal.cpp  urdf_loader_simple.cpp  urdf_loader_simple_metal.cpp
examples/misc/: CMakeLists.txt  clipping.cpp  clipping_metal.cpp  lut.cpp  morphtargets.cpp  morphtargets_metal.cpp  morphtargets_sphere.cpp  morphtargets_sphere_metal.cpp  mouse_key_listener.cpp  multiple_scenes.cpp  multiple_scenes_metal.cpp  raycast.cpp  raycast_metal.cpp
examples/objects/: CMakeLists.txt  PointsExampleData.hpp  bones.cpp  bones_metal.cpp  decal.cpp  decal_metal.cpp  instancing.cpp  instancing_metal.cpp  lod.cpp  lod_metal.cpp  particle_system.cpp  particle_system_metal.cpp  points.cpp  points_metal.cpp  sprite.cpp  sprite_metal.cpp  text_sprite.cpp  text_sprite_metal.cpp  water.cpp  water_metal.cpp
examples/projects/Crane3R/: CMakeLists.txt  main.cpp  main_metal.cpp
examples/projects/MotorControl/: CMakeLists.txt  main.cpp  main_metal.cpp
examples/projects/Optimization/: CMakeLists.txt  optimization.cpp  optimization_metal.cpp
examples/projects/Snake/: CMakeLists.txt  SnakeScene.hpp  main.cpp  main_metal.cpp
examples/projects/SpheroControl/: CMakeLists.txt  main.cpp  main_metal.cpp
examples/projects/Youbot/: CMakeLists.txt  youbot_kine.cpp  youbot_kine_metal.cpp
examples/shaders/: CMakeLists.txt  raw_shader.cpp  raw_shader_metal.cpp  seascape_demo.cpp  seascape_demo_metal.cpp
examples/textures/: CMakeLists.txt  cubemap.cpp  cubemap_metal.cpp  data_texture.cpp  data_texture_metal.cpp  depth_texture.cpp  depth_texture_metal.cpp  imgui_framebuffer.cpp  imgui_framebuffer_metal.cpp  texture2d.cpp  texture2d_metal.cpp  texture3d.cpp  texture3d_metal.cpp
include/threepp/: constants.hpp  threepp.hpp
include/threepp/cameras/: CubeCamera.hpp
include/threepp/canvas/: Canvas.hpp  GlfwWindow.hpp  Window.hpp
include/threepp/core/: BufferAttribute.hpp  BufferGeometry.hpp  Uniform.hpp
include/threepp/helpers/: DepthSensor.hpp  LidarSensor.hpp
include/threepp/lights/: LightShadow.hpp
include/threepp/loaders/: AssimpLoader.hpp
include/threepp/materials/: ParticleMaterial.hpp  ShaderMaterial.hpp  materials.hpp
include/threepp/objects/: ParticleSystem.hpp  Reflector.hpp  Water.hpp
include/threepp/renderers/: CubeRenderTarget.hpp  GLRenderTarget.hpp  GLRenderer.hpp  RenderColorSpace.hpp  RenderJob.hpp  RenderTarget.hpp  Renderer.hpp
include/threepp/textures/: DataArrayTexture.hpp  DataTexture.hpp  Image.hpp
src/: CMakeLists.txt
src/threepp/canvas/: Canvas.cpp  GlfwWindow.cpp
src/threepp/helpers/: DepthSensor.cpp  LidarSensor.cpp
src/threepp/materials/: ParticleMaterial.cpp  ShaderMaterial.cpp  SpriteMaterial.cpp
src/threepp/math/: Quaternion.cpp
src/threepp/objects/: HUD.cpp  ParticleSystem.cpp  Reflector.cpp  (+1 more)
tests/: CMakeLists.txt
tests/examples/: CMakeLists.txt  PointsExampleData_test.cpp
tests/materials/: CMakeLists.txt  ShaderMaterial_test.cpp
tests/renderers/: CMakeLists.txt
tests/renderers/metal/: CMakeLists.txt  MetalDepthTextureShader_test.cpp  MetalP1_test.cpp  MetalP2RuntimeSmoke_test.mm  MetalReflectorShader_test.cpp  MetalRenderList_test.cpp  MetalRenderObjects_test.mm  MetalScreenSpace_test.cpp  MetalShaderCompile_test.mm  MetalShadowRenderer_test.cpp  MetalSimpleSkinningSmoke_test.mm  MetalWireframeGeometry_test.cpp  SlangShaderCompiler_test.cpp  Texture3DMetalShader_test.cpp  ZeroCopyTexture_test.mm
(+58 files in other folders)
